--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/league-spartan": "^4.5.1",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.2",
     "@mui/styles": "^5.4.4",
